--- a/FRONTEND/src/app/pages/departments/departments.component.html
+++ b/FRONTEND/src/app/pages/departments/departments.component.html
@@ -29,10 +29,9 @@
                         </td>
                         <td class="tdContenido actions">
                             <button (click)="updateDepartmentModal(department)" class="updateButton">
-                                <i class="bi bi-pencil-square"></i>
-                            </button>
+                                <i class="bi bi-pencil-square"></i>                            </button>
                             <button (click)="deleteDepartment(department._id)" class="deleteButton">
-                                <i class="bi bi-trash"></i>
+                                <i class="bi bi-trash3"></i>
                             </button>
 
                         </td>
