--- a/FRONTEND/src/app/pages/employees/employees.component.html
+++ b/FRONTEND/src/app/pages/employees/employees.component.html
@@ -37,10 +37,9 @@
                         </td>
                         <td class="tdContenido actions">
                             <button (click)="updateEmployeeModal(employee)" class="updateButton">
-                                <i class="bi bi-pencil-square"></i>
-                            </button>
+                                <i class="bi bi-pencil-square"></i>                            </button>
                             <button (click)="deleteEmployee(employee._id)" class="deleteButton">
-                                <i class="bi bi-trash"></i>
+                                <i class="bi bi-trash3"></i>
                             </button>
 
                         </td>
